# Hubs-Game-Client

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  jest.config.js  lerna.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
proto/: gateway.service.proto  session.service.proto  transaction.service.proto
scripts/: generate-services.ts  rename-generated-files.ts
src/: auth.utils.ts  common.types.ts  gamehub-grpc.module-definition.ts  gamehub-grpc.module.ts  gateway-client.module.ts  index.ts  ssl.utils.ts  types.d.ts
src/examples/: auth-example.ts  ssl-example.ts
src/services/: gamehub-gateway.client.ts  gateway.service.ts  index.ts  session.service.ts  transaction.service.ts
src/types/: gateway.service.ts  session.service.ts  transaction.service.ts
src/types/google/protobuf/: timestamp.ts
tests/: setup.ts
tests/fixtures/: mock-responses.ts
tests/helpers/: mock-grpc-server.ts
tests/integration/: grpc-client.integration.spec.ts
tests/unit/modules/: gateway-client.module.spec.ts
tests/unit/services/: gateway.service.spec.ts
